Prevent horizontal overflow on small screens

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -15,6 +15,7 @@ body {
 
 .Splash-inner {
   position: absolute;
+  box-sizing: border-box;
   width: 100%;
   top: 50%;
   padding: 20px;
